--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
 
         <!-- Add your site or application content here -->
 
+        <input type="file" id="originalImage" name="originalImage" accept="image/*" />
+
+        <canvas width="400" height="300" id="canvas"/>
+
+
+
+
+
+
         <script src="js/vendor/jquery-2.1.3.min.js"></script>
         <script src="js/helper.js"></script>
         <script src="js/main.js"></script>
